--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -78,7 +78,7 @@
             <img src="/static/img/source_animal.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
         </div>
         <div class="col-md-5">
-            <h3 class="disabled-source-types">Pet Profile</h3>
+            <h3 class="disabled-source-types">{{ _('Pet Profile') }}</h3>
             <p class="small-text disabled-source-types">{{ _('Share sample(s) from an animal (e.g. fecal, saliva, skin, etc.)') }}</p>
             <p class="disabled-source-types"><strong>{{ _('Coming Soon') }}</strong></p>
         </div>
