--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -120,7 +120,7 @@
                     </div>
                     <div class="barcode-col barcode-col-end">
                         {% if vio.vioscreen_status == 3 %}
-                            <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);">{{ _('View Top Food Report') }}</a>
+                            <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);" target="_blank">{{ _('View Top Food Report') }}</a>
                         {% else %}
                             {% if vio.sample_id != None %}
                                 <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?sample_id={{ vio.sample_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);">{{ _('Continue FFQ') }}</a>
