--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -91,8 +91,8 @@
     <div class="container profile-container">
         <div class="card mt-4 p-4">
             <div class="row">
-                <div class="col-3">
-                    <h1>{{ _('My Nutrition') }}</h1>
+                <div class="col-2">
+                    <h1>{{ _('My FFQs') }}</h1>
                 </div>
                 <div class="plus-button-wrapper p-0" onmouseover="document.getElementById('hidden_plus_stuff').style.display = '';" onmouseout="document.getElementById('hidden_plus_stuff').style.display = 'none';">
                     <div class="plus-button-white-bg">
@@ -114,13 +114,13 @@
             </div>
             {% if vio_reg_entries|length > 0 %}
                 {% for vio in vio_reg_entries %}
-                <div class="row barcode-row mb-2">
+                <div class="row mt-3">
                     <div class="barcode-col ffq-text">
                         {{ vio.creation_time }}
                     </div>
                     <div class="barcode-col barcode-col-end">
                         {% if vio.vioscreen_status == 3 %}
-                            <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);" target="_blank">{{ _('View Top Food Report') }}</a>
+                            <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport/pdf" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);" target="_blank">{{ _('Download Top Food Report') }}</a>
                         {% else %}
                             {% if vio.sample_id != None %}
                                 <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?sample_id={{ vio.sample_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);">{{ _('Continue FFQ') }}</a>
